fixed cards break on small screens

--- a/assets/css/projects.css
+++ b/assets/css/projects.css
@@ -46,7 +46,12 @@
   }
   .project-card {
     width: 100%;
-    flex: 1;
+  }
+}
+@media (max-width: 350px) {
+  .project-card {
+    width: 100%;
+    height: 200px;
   }
 }
 
